--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
-    "react": "^16.13.0",
+    "react": "^18.2.0-next-d300cebde-20220601",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "^16.13.0",
+    "react-dom": "^18.2.0-next-d300cebde-20220601",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
