--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
-    "react": "^18.2.0-next-d300cebde-20220601",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "^18.2.0-next-d300cebde-20220601",
-    "react-redux": "^7.2.6",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
