--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^18.1.0",
+    "react-rating-tooltip": "^1.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
