--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.2.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "force": "^0.0.3",
     "react": "^16.8.0",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^16.8.0",
